--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Tezos Example Box =================",
   "devDependencies": {
     "ganache-cli": "6.12.0-tezos.0",
-    "web3": "^1.3.5"
+    "web3": "^1.3.5",
+    "@taquito/taquito": "^6.3.5-beta.0"
   },
   "scripts": {
     "start-sandbox": "ganache-cli --flavor tezos --seed alice"
